--- a/index.qmd
+++ b/index.qmd
@@ -12,3 +12,5 @@ To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
 ```
 
 Немного математических формул: $a=\frac{g t^2} 2$
+
+# Проверка автодеплоя
