[wip] добавил колонки

--- a/index.qmd
+++ b/index.qmd
@@ -14,3 +14,19 @@ To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
 Немного математических формул: $a=\frac{g t^2} 2$
 
 # Проверка автодеплоя
+::: {layout-ncol=4}
+Механика
+(семинары, 1 курс, ФКИ)
+
+
+Квантовая механика
+(семинары, 4 курс, ФКИ)
+
+
+Физика волновых процессов
+(семинары, 3 курс, ВМК)
+
+
+Микроскопия сверх-разрешения
+(спецкурс, 1 курс магистр., ФФ)
+:::
