[wip] перетащил еще немного страничек

--- a/cv.qmd
+++ b/cv.qmd
@@ -1,16 +1,39 @@
 ---
-title: "Tp Opt"
+title: "Шутова Ольга Анатольевна"
 ---
 
-This is a Quarto website.
+-   электронный адрес: oa.shoutova\@physics.msu.ru
 
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
+-   13 сентября 1977 г.р.
 
-```{r}
-#| eval: false
-1 + 1
-```
+-   кандидат физико-математических наук
 
-Немного математических формул: $a=\frac{g t^2} 2$
+-   ассистент кафедры общей физики и волновых процессов физического факультета МГУ им. М.В. Ломоносова
 
-# Проверка автодеплоя
+-   Образование:
+
+    -   1994 г. окончание специализированного учебно-научного центра МГУ им. М.В. Ломоносова (СУНЦ МГУ, школа им. А.Н. Колмогорова);
+
+    -   2000 г. окончание физического факультета МГУ им. М.В. Ломоносова (диплом с отличием);
+
+    -   2006 г. окончание аспирантуры физического факультета МГУ им. М.В. Ломоносова (защищена кандидатская диссертация на тему: «Взаимодействие сильного электромагнитного поля с одиночным атомом и средой в рамках непертурбативной теории: нарушение традиционной симметрии задачи»).
+
+-   Повышение квалификации:
+
+    -   2020 г. на философском факультете МГУ имени М.В. Ломоносова курс "Цифровая педагогика в современном универститете" (диплом).
+
+-   Наукометрические данные:
+
+    -   [Профиль на сайте МГУ](https://istina.msu.ru/profile/ShoutovaOA/).
+
+    -   Количество статей за все время: 35.
+
+    -   Количество цитирований статей в журналах по данным Web of Science: 75, Scopus: 82
+
+-   Опыт преподавательской работы:
+
+    -   Лекции по курсу: "Введение в нанооптику" (МГУ им. М.В.Ломоносова, физический факультет, 4-ый курс, совместно с доц. Коновко А.А.)
+    -   Лекции по курсу: "Современная оптическая микроскопия сверхвысокого разрешения" (МГУ им. М.В.Ломоносова, физический факультет, магистранты, 1-й год обучения)
+    -   Лекции по курсу: "Атомные частицы в сильных световых полях" (МГУ им. М.В.Ломоносова, физический факультет, магистранты, 1-й год обучения)
+    -   Семинары по курсу "Термодинамика и статистическая физика" (МГУ им. М.В.Ломоносова, факультет ВМиК, 3-ий курс)
+    -   Семинары по курсу "Физика волновых процессов" (МГУ им. М.В.Ломоносова, факультет ВМиК, 3-ий курс)
